tests/miniJava/neg/005160_mutation.MiniJava
class java { public static void Main ( String [ ] java ) { { } } } class java { public int [] java ( int [] public java ) { return 0 ; } }
